# valabind

./: .gitignore  .hgtags  .travis.yml  AUTHORS  ChangeLog  Makefile  NOTES  README  README.md  THANKS  TODO  TODO.md  autogen.sh  config.mk.acr  config.vala  config.vala.in  configure  configure.acr  ctypeswriter.vala  cxxwriter.vala  dlangwriter.vala  foo.vapi  gearwriter.vala  getvv  girwriter.vala  gowriter.vala  main.vala  meson.build  nodeffiwriter.vala  swigcompiler.vala  swigwriter.vala  utils.vala  valabind-cc  valabind-cc.1  valabind.1  valabindcompiler.vala  valabindwriter.vala  valaswig-cc  valaswig-cc.1  valaswig.1  (+2 more)
.github/workflows/: ci.yml
private/: ccode.vapi  codegen.vapi  gee.vapi  vala.h  vala.vapi  valaccode.h  valacodegen.h  valagee.h
src/: ctypeswriter.vala  cxxwriter.vala  dlangwriter.vala  girwriter.vala  gowriter.vala  main.vala  nodeffiwriter.vala  swigwriter.vala  utils.vala  valabindwriter.vala  vlangwriter.vala  windows.c  windows.vapi
t/gear/: Makefile
t/gir/: Makefile  Test.vapi
t/go/: camelcase.vapi  classes.vapi  enums.vapi  generic_names.vapi  generics.vapi  namespace_function.vapi  structs.vapi
t/java/: Makefile  RAsm.java  RAsmCode.java
t/python/: ctypes.py  example.py
t/r2/: Makefile  libr-swig.sh  test.cs  test.java  test.pl  test.py  test.rb
t/v/: Makefile  main.v  system.vapi
t/vala/: Makefile  test.cxx  test.py  vstest.vala
